--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -17,6 +17,7 @@
   <body>
      <!-- header -->
      <header>
+      <div class="header-container">
       <nav class="list header-menu">
         <a href="./index.html" class="logo link">Web<span class="logo-span link">Studio</span></a>
   
@@ -48,6 +49,7 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <!-- main-content -->
     <main>
