--- a/index.html
+++ b/index.html
@@ -5,62 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-   
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-     <!-- header -->
-     <header>
-      <div class="header-container">
-      <nav class="list header-menu">
-        <a href="./index.html" class="logo link">Web<span class="logo-span link">Studio</span></a>
-  
-        <ul class="list header-menu">
-          <li >
-            <a href="./index.html" class="header-text link">Studio</a>
-          </li>
-  
-          <li >
-            <a href="./portfolio.html" class="header-text link"> Portfolio</a>
-          </li>
-  
-          <li >
-            <a href="" class="header-text link"> Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address  class="list address">
-        <ul class="list header-menu">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link header-contacts link-color"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link header-contacts link-color"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
+    <!-- header -->
+    <header>
+      <div class="header container">
+        <nav class="list header-menu">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-span link">Studio</span></a
+          >
+
+          <ul class="list header-menu">
+            <li class="link-header">
+              <a href="./index.html" class="header-text link">Studio</a>
+            </li>
+
+            <li class="link-header">
+              <a href="./portfolio.html" class="header-text link"> Portfolio</a>
+            </li>
+
+            <li class="link-header">
+              <a href="" class="header-text link"> Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="list address">
+          <ul class="list header-menu">
+            <li class="link">
+              <a
+                href="mailto:info@devstudio.com"
+                class="link header-contacts link-color"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link">
+              <a
+                href="tel:+110001111111"
+                class="link header-contacts link-color"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- main-content -->
     <main>
       <section class="hero-container">
-        <h1 class="hero-text-container">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container section-container">
+          <h1 class="hero-text-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <!-- section 2 ( about us) -->
-      <section class="about-hero">
+      <section class="about-hero container">
         <h2 class="caption-texts"></h2>
         <ul class="list">
           <li>
@@ -97,7 +111,7 @@
         </ul>
       </section>
       <!-- section 3 (photo) -->
-      <section class="work-hero">
+      <section class="work-hero container">
         <h2 class="work-hero-caption">What are we doing</h2>
         <ul class="list">
           <li>
@@ -116,7 +130,7 @@
         </ul>
       </section>
       <!-- Our Team -->
-      <section class="hero-team">
+      <section class="hero-team container">
         <h2 class="team-caption">Our Team</h2>
         <ul class="list">
           <li class="hero-li">
@@ -148,13 +162,15 @@
     </main>
     <!-- footer  -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="footer-span">Studio</span></a
-      >
-      <p class="footer-comment">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container container">
+        <a href="./index.html" class="footer-logo link"
+          >Web<span class="footer-span">Studio</span></a
+        >
+        <p class="footer-comment">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
