--- a/portfolio.html
+++ b/portfolio.html
@@ -12,49 +12,61 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header>
-      <nav class="list header-menu">
-        <a href="./index.html" class="logo link"
-          >Web<span class="logo-span link">Studio</span></a
-        >
+      <div class="header container">
+        <nav class="list header-menu">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-span link">Studio</span></a
+          >
 
-        <ul class="list header-menu">
-          <li>
-            <a href="./index.html" class="header-text link">Studio</a>
-          </li>
+          <ul class="list header-menu">
+            <li class="link-header">
+              <a href="./index.html" class="header-text link">Studio</a>
+            </li>
 
-          <li>
-            <a href="./portfolio.html" class="header-text link"> Portfolio</a>
-          </li>
+            <li class="link-header">
+              <a href="./portfolio.html" class="header-text link"> Portfolio</a>
+            </li>
 
-          <li>
-            <a href="" class="header-text link"> Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="list address">
-        <ul class="list header-menu">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="link header-contacts link-color"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link header-contacts link-color"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li class="link-header">
+              <a href="" class="header-text link"> Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="list address">
+          <ul class="list header-menu">
+            <li class="link">
+              <a
+                href="mailto:info@devstudio.com"
+                class="link header-contacts link-color"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link">
+              <a
+                href="tel:+110001111111"
+                class="link header-contacts link-color"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section>
+      <section class="container">
         <h1 hidden>hidden</h1>
         <ul class="list">
           <li>
@@ -74,8 +86,8 @@
           </li>
         </ul>
 
-        <ul class="list">
-          <li>
+        <ul class="list photo-container">
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-one-photo.jpg"
@@ -87,7 +99,7 @@
               <p class="photo-comment">App</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-one-photo-t.jpg"
@@ -99,7 +111,7 @@
               <p class="photo-comment">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-one-photo-l.jpg"
@@ -111,7 +123,7 @@
               <p class="photo-comment">App</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-two-photo.jpg"
@@ -123,7 +135,7 @@
               <p class="photo-comment">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-two-photo-t.jpg"
@@ -135,7 +147,7 @@
               <p class="photo-comment">Design</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-two-photo-l.jpg"
@@ -147,7 +159,7 @@
               <p class="photo-comment">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-last-o.jpg"
@@ -159,7 +171,7 @@
               <p class="photo-comment">Design</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-last-photo-lemons.jpg"
@@ -171,7 +183,7 @@
               <p class="photo-comment">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="border">
             <a href="" class="link">
               <img
                 src="./images/section-last-l.jpg"
@@ -188,13 +200,15 @@
     </main>
     <!-- footer  -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="footer-span">Studio</span></a
-      >
-      <p class="footer-comment">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container container">
+        <a href="./index.html" class="footer-logo link"
+          >Web<span class="footer-span">Studio</span></a
+        >
+        <p class="footer-comment">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
