--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,10 @@
       </div>
     </header>
     <main>
-      <section class="container">
+      <section>
         <h1 hidden>hidden</h1>
-        <ul class="list">
+
+        <ul class="list btn-container container">
           <li>
             <button type="button" class="btn">All</button>
           </li>
@@ -86,7 +87,7 @@
           </li>
         </ul>
 
-        <ul class="list photo-container">
+        <ul class="list photo-container container">
           <li class="border">
             <a href="" class="link">
               <img
@@ -95,8 +96,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Banking App Interface Concept</h2>
-              <p class="photo-comment">App</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Banking App Interface Concept</h2>
+                <p class="photo-comment">App</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -107,8 +110,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Cashless Payment</h2>
-              <p class="photo-comment">Marketing</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Cashless Payment</h2>
+                <p class="photo-comment">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -119,8 +124,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Meditation App</h2>
-              <p class="photo-comment">App</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Meditation App</h2>
+                <p class="photo-comment">App</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -131,8 +138,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Taxi Service</h2>
-              <p class="photo-comment">Marketing</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Taxi Service</h2>
+                <p class="photo-comment">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -143,8 +152,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Screen Illustrations</h2>
-              <p class="photo-comment">Design</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Screen Illustrations</h2>
+                <p class="photo-comment">Design</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -155,8 +166,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Online Courses</h2>
-              <p class="photo-comment">Marketing</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Online Courses</h2>
+                <p class="photo-comment">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -167,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Instagram Stories Concept</h2>
-              <p class="photo-comment">Design</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Instagram Stories Concept</h2>
+                <p class="photo-comment">Design</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -179,8 +194,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Organic Food</h2>
-              <p class="photo-comment">Web Site</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Organic Food</h2>
+                <p class="photo-comment">Web Site</p>
+              </div>
             </a>
           </li>
           <li class="border">
@@ -191,8 +208,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="photo-text">Fresh Coffee</h2>
-              <p class="photo-comment">Web Site</p>
+              <div class="bottom-text">
+                <h2 class="photo-text">Fresh Coffee</h2>
+                <p class="photo-comment">Web Site</p>
+              </div>
             </a>
           </li>
         </ul>
