--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         </ul>
       </section>
       <!-- Our Team -->
-      <section class="hero-team container">
+      <section class="hero-team ">
+        <div class="container">
         <h2 class="team-caption">Our Team</h2>
         <ul class="list">
           <li class="hero-li">
@@ -158,6 +159,7 @@
             <p class="empl-comment">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- footer  -->
