--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <!-- section 2 ( about us) -->
       <section class="about-hero container">
         <h2 class="caption-texts"></h2>
-        <ul class="list">
-          <li>
+        <ul class="list caption-list">
+          <li class="caption-list">
             <h3 class="caption-texts">Strategy</h3>
             <p class="caption-comment">
               Our goal is to identify the business problem to walk away with the
@@ -85,7 +85,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="caption-list">
             <h3 class="caption-texts">Punctuality</h3>
             <p class="caption-comment">
               Bring the key message to the brand's audience for the best price
@@ -93,7 +93,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="caption-list">
             <h3 class="caption-texts">Diligence</h3>
             <p class="caption-comment">
               Research and confirm brands that present the strongest digital
@@ -101,7 +101,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="caption-list">
             <h3 class="caption-texts">Technologies</h3>
             <p class="caption-comment">
               Design practice focused on digital experiences. We bring forth a
