--- a/portfolio.html
+++ b/portfolio.html
@@ -67,9 +67,10 @@
     </header>
     <main>
       <section>
-        <h1 hidden>hidden</h1>
+        <div class="container">
+        <h1 class="visually-hidden">Portfolio</h1>
 
-        <ul class="list btn-container container">
+        <ul class="list btn-container ">
           <li>
             <button type="button" class="btn">All</button>
           </li>
@@ -215,6 +216,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- footer  -->
