--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
     </header>
     <!-- main-content -->
     <main>
-      <section class="hero-container">
+      <section class="hero-section">
         <div class="container section-container">
           <h1 class="hero-text-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
       <!-- section 2 ( about us) -->
-      <section class="about-hero container">
-        <h2 class="caption-texts"></h2>
+      <section class="about-hero">
+        <div class="container">
+        <h2 class="visually-hidden"></h2>
         <ul class="list caption-list">
           <li class="caption-list">
             <h3 class="caption-texts">Strategy</h3>
@@ -109,9 +110,11 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <!-- section 3 (photo) -->
-      <section class="work-hero container">
+      <section class="work-hero ">
+        <div class="container">
         <h2 class="work-hero-caption">What are we doing</h2>
         <ul class="list">
           <li>
@@ -128,6 +131,7 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <!-- Our Team -->
       <section class="hero-team ">
