--- a/portfolio.html
+++ b/portfolio.html
@@ -66,157 +66,157 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="porftolio-section">
         <div class="container">
-        <h1 class="visually-hidden">Portfolio</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
 
-        <ul class="list btn-container ">
-          <li>
-            <button type="button" class="btn">All</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="btn">App</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Design</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Marketing</button>
-          </li>
-        </ul>
+          <ul class="list btn-container">
+            <li>
+              <button type="button" class="btn">All</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Web Site</button>
+            </li>
+            <li>
+              <button type="button" class="btn">App</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Design</button>
+            </li>
+            <li>
+              <button type="button" class="btn">Marketing</button>
+            </li>
+          </ul>
 
-        <ul class="list photo-container container">
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-one-photo.jpg"
-                alt=" App"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Banking App Interface Concept</h2>
-                <p class="photo-comment">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-one-photo-t.jpg"
-                alt="Payment"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Cashless Payment</h2>
-                <p class="photo-comment">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-one-photo-l.jpg"
-                alt="App"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Meditation App</h2>
-                <p class="photo-comment">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-two-photo.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Taxi Service</h2>
-                <p class="photo-comment">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-two-photo-t.jpg"
-                alt="Design"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Screen Illustrations</h2>
-                <p class="photo-comment">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-two-photo-l.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Online Courses</h2>
-                <p class="photo-comment">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-last-o.jpg"
-                alt="Instagram Stories"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Instagram Stories Concept</h2>
-                <p class="photo-comment">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-last-photo-lemons.jpg"
-                alt="Web Site"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Organic Food</h2>
-                <p class="photo-comment">Web Site</p>
-              </div>
-            </a>
-          </li>
-          <li class="border">
-            <a href="" class="link">
-              <img
-                src="./images/section-last-l.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <div class="bottom-text">
-                <h2 class="photo-text">Fresh Coffee</h2>
-                <p class="photo-comment">Web Site</p>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
+          <ul class="list photo-container container">
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-one-photo.jpg"
+                  alt=" App"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Banking App Interface Concept</h2>
+                  <p class="photo-comment">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-one-photo-t.jpg"
+                  alt="Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Cashless Payment</h2>
+                  <p class="photo-comment">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-one-photo-l.jpg"
+                  alt="App"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Meditation App</h2>
+                  <p class="photo-comment">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-two-photo.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Taxi Service</h2>
+                  <p class="photo-comment">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-two-photo-t.jpg"
+                  alt="Design"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Screen Illustrations</h2>
+                  <p class="photo-comment">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-two-photo-l.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Online Courses</h2>
+                  <p class="photo-comment">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-last-o.jpg"
+                  alt="Instagram Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Instagram Stories Concept</h2>
+                  <p class="photo-comment">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-last-photo-lemons.jpg"
+                  alt="Web Site"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Organic Food</h2>
+                  <p class="photo-comment">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="border">
+              <a href="" class="link">
+                <img
+                  src="./images/section-last-l.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="bottom-text">
+                  <h2 class="photo-text">Fresh Coffee</h2>
+                  <p class="photo-comment">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer  -->
