--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <div class="header container">
+    <header class="header">
+      <div class="container header-container">
         <nav class="list header-menu">
           <a href="./index.html" class="logo link"
             >Web<span class="logo-span link">Studio</span></a
@@ -47,14 +47,14 @@
 
         <address class="list address">
           <ul class="list header-menu">
-            <li class="link">
+            <li>
               <a
                 href="mailto:info@devstudio.com"
                 class="link header-contacts link-color"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="link">
+            <li>
               <a
                 href="tel:+110001111111"
                 class="link header-contacts link-color"
@@ -76,94 +76,98 @@
       <!-- section 2 ( about us) -->
       <section class="about-hero">
         <div class="container">
-        <h2 class="visually-hidden"></h2>
-        <ul class="list caption-list">
-          <li class="caption-list">
-            <h3 class="caption-texts">Strategy</h3>
-            <p class="caption-comment">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+          <h2 class="visually-hidden">skills</h2>
+          <ul class="list caption-list">
+            <li class="caption-list">
+              <h3 class="caption-texts">Strategy</h3>
+              <p class="caption-comment">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li class="caption-list">
-            <h3 class="caption-texts">Punctuality</h3>
-            <p class="caption-comment">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="caption-list">
+              <h3 class="caption-texts">Punctuality</h3>
+              <p class="caption-comment">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li class="caption-list">
-            <h3 class="caption-texts">Diligence</h3>
-            <p class="caption-comment">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="caption-list">
+              <h3 class="caption-texts">Diligence</h3>
+              <p class="caption-comment">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li class="caption-list">
-            <h3 class="caption-texts">Technologies</h3>
-            <p class="caption-comment">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
+            <li class="caption-list">
+              <h3 class="caption-texts">Technologies</h3>
+              <p class="caption-comment">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section 3 (photo) -->
-      <section class="work-hero ">
+      <section class="work-hero">
         <div class="container">
-        <h2 class="work-hero-caption">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/PC.jpg" alt="PC" width="360" />
-          </li>
-          <li>
-            <img src="./images/phonescr.jpg" alt="Screen Our App" width="360" />
-          </li>
-          <li>
-            <img
-              src="./images/design.jpg"
-              alt="Screen Design of our Apps"
-              width="360"
-            />
-          </li>
-        </ul>
-      </div>
+          <h2 class="work-hero-caption">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/PC.jpg" alt="PC" width="360" />
+            </li>
+            <li>
+              <img
+                src="./images/phonescr.jpg"
+                alt="Screen Our App"
+                width="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/design.jpg"
+                alt="Screen Design of our Apps"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our Team -->
-      <section class="hero-team ">
+      <section class="hero-team">
         <div class="container">
-        <h2 class="team-caption">Our Team</h2>
-        <ul class="list">
-          <li class="hero-li">
-            <img src="./images/first.jpg" alt="PM" width="264" />
-            <h3 class="our-employees">Mark Guerrero</h3>
-            <p class="empl-comment">Product Designer</p>
-          </li>
-          <li class="hero-li">
-            <img
-              src="./images/second.jpg"
-              alt="Frontend Developer"
-              width="264"
-            />
-            <h3 class="our-employees">Tom Ford</h3>
-            <p class="empl-comment">Frontend Developer</p>
-          </li>
-          <li class="hero-li">
-            <img src="./images/third.jpg" alt="Marketing" width="264" />
-            <h3 class="our-employees">Camila Garcia</h3>
-            <p class="empl-comment">Marketing</p>
-          </li>
-          <li class="hero-li">
-            <img src="./images/fourth.jpg" alt="UI Designer" width="264" />
-            <h3 class="our-employees">Daniel Wilson</h3>
-            <p class="empl-comment">UI Designer</p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="team-caption">Our Team</h2>
+          <ul class="list">
+            <li class="hero-li">
+              <img src="./images/first.jpg" alt="PM" width="264" />
+              <h3 class="our-employees">Mark Guerrero</h3>
+              <p class="empl-comment">Product Designer</p>
+            </li>
+            <li class="hero-li">
+              <img
+                src="./images/second.jpg"
+                alt="Frontend Developer"
+                width="264"
+              />
+              <h3 class="our-employees">Tom Ford</h3>
+              <p class="empl-comment">Frontend Developer</p>
+            </li>
+            <li class="hero-li">
+              <img src="./images/kamila.jpg" alt="Marketing" width="264" />
+              <h3 class="our-employees">Camila Garcia</h3>
+              <p class="empl-comment">Marketing</p>
+            </li>
+            <li class="hero-li">
+              <img src="./images/daniel.jpg" alt="UI Designer" width="264" />
+              <h3 class="our-employees">Daniel Wilson</h3>
+              <p class="empl-comment">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer  -->
