--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <div class="header container">
+    <header class="header">
+      <div class="container header-container">
         <nav class="list header-menu">
           <a href="./index.html" class="logo link"
             >Web<span class="logo-span link">Studio</span></a
@@ -47,14 +47,14 @@
 
         <address class="list address">
           <ul class="list header-menu">
-            <li class="link">
+            <li>
               <a
                 href="mailto:info@devstudio.com"
                 class="link header-contacts link-color"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="link">
+            <li>
               <a
                 href="tel:+110001111111"
                 class="link header-contacts link-color"
@@ -88,7 +88,7 @@
             </li>
           </ul>
 
-          <ul class="list photo-container container">
+          <ul class="list photo-container">
             <li class="border">
               <a href="" class="link">
                 <img
