--- a/portfolio.html
+++ b/portfolio.html
@@ -25,28 +25,28 @@
     <!-- header -->
     <header class="header">
       <div class="container header-container">
-        <nav class="list header-menu">
-          <a href="./index.html" class="logo link"
-            >Web<span class="logo-span link">Studio</span></a
+        <nav class="list header-nav">
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="header-logo-span link">Studio</span></a
           >
 
-          <ul class="list header-menu">
-            <li class="link-header">
-              <a href="./index.html" class="header-text link">Studio</a>
+          <ul class="list header-nav">
+            <li class="header-item">
+              <a href="./index.html" class="header-link-text link">Studio</a>
             </li>
 
-            <li class="link-header">
-              <a href="./portfolio.html" class="header-text link"> Portfolio</a>
+            <li class="header-item">
+              <a href="./portfolio.html" class="header-link-text link"> Portfolio</a>
             </li>
 
-            <li class="link-header">
-              <a href="" class="header-text link"> Contacts</a>
+            <li class="header-item">
+              <a href="" class="header-link-text link"> Contacts</a>
             </li>
           </ul>
         </nav>
 
-        <address class="list address">
-          <ul class="list header-menu">
+        <address class="list header-address">
+          <ul class="list address-menu">
             <li>
               <a
                 href="mailto:info@devstudio.com"
